<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="22dp"
        android:text="@string/move_plan_to"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/year"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/term"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/term"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/year"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/confirm_move_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/confirm"
        android:layout_below="@+id/term"
        android:layout_centerHorizontal="true" />
</RelativeLayout>