<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/create_elective_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBlue"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textColor="@android:color/white"/>

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/name"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@+id/create_elective_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp" />

    <EditText
        android:id="@+id/credithours"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/credithr"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp" />

    <EditText
        android:id="@+id/abbrev"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/abbrev"
        android:layout_below="@+id/credithours"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp" />

    <Button
        android:id="@+id/add_elective_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_alignBottom="@+id/back_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp" />

    <Button
        android:id="@+id/view_free_electives"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/term"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginBottom="120dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>