<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/snail_lg"
    android:fadingEdge="horizontal"
    android:orientation="vertical"
    tools:context="comp3350.degree_planner.presentation.MainActivity">

        <Button
            android:id="@+id/buttonDegrees"
            android:layout_width="267dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/degree"
            android:fadingEdge="horizontal"
            android:onClick="buttonDegreesOnClick"
            android:text="@string/degreeInfo"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="320dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/buttonCoursePlan"
            android:layout_width="267dp"
            android:layout_height="60dp"
            android:background="@drawable/plan"
            android:onClick="buttonCoursePlanOnClick"
            android:text="@string/coursePlan"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="91dp"
            android:layout_alignTop="@+id/buttonDegrees"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/buttonProgress"
            android:layout_width="267dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/progress"
            android:onClick="buttonDegreeProgressOnClick"
            android:text="@string/progress"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/buttonCoursePlan"
            android:layout_centerHorizontal="true" />
</RelativeLayout>

